<resources>
    <string name="app_name">Heisig And SpacedRepetition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navSpaced_menu">Review</string>
    <string name="navHome_menu">Home</string>
    <string name="navStat_menu">Stat</string>
    <string name="exampleMeaning">visit</string>
    <string name="exampleKun">やす.い、 やす.まる、 やす、 やす.らか</string>
    <string name="exampleOn">ホウ\nおとず、たず</string>
    <string name="example_kanji">語</string>
    <string name="next">next</string>
    <string name="position">Position :</string>
    <string name="radical">Radical :</string>
    <string name="example_component">小</string>
    <string name="meaning">Meaning :</string>
    <string name="reading">Reading :</string>
    <string name="stroke">Stroke :</string>
    <string name="radical_position">⿸</string>
    <string name="example_stroke">3</string>
    <string name="example_meaning">small, insignificant</string>
    <string name="example_reading">ちいさい-chīsai</string>
    <string name="your_story">Story : </string>
    <string name="example_story">one month longer than one day</string>
    <string name="description">this is description</string>
    <string name="example">Example</string>
    <string name="time">17:54:08</string>
    <string name="name">Name :</string>
    <string name="add">create</string>
    <string name="congratulation">Congratulation</string>
    <string name="example_score">Score : 10/10</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="story">Story :</string>
    <string name="add_button">Add_button</string>
    <string name="spaced_do_it">You can do it !</string>
    <string name="do_it">Do it!</string>
    //setText
    <string name="total_messages">%1$d/%2$d</string>
    <string name="total_kanji_messages">Total : %1$d kanji</string>
    <string name="newline">%1$s\n%2$s</string>
    <string name="comma">%1$s,%2$s</string>
    <string name="score">Score:%1$d/%2$d</string>
    //
    <string name="grade_1">Grade 1</string>
    <string name="grade_2">Grade 2</string>
    <string name="grade_3">Grade 3</string>
    <string name="grade_4">Grade 4</string>
    <string name="grade_5">Grade 5</string>
    <string name="grade_6">Grade 6</string>
    <string name="total_example">TOTAL : 15 KANJI</string>
    <string name="start">START</string>
    <string name="stage">STAGE</string>
    <string name="example_vocab">歴訪する（れきほうする）</string>
    <string name="example_vocab_meaning">visit [v.t.]</string>
    <string name="example_radical"></string>
    <string name="example_radical_name">ごんべん</string>
    <string name="example_radical_meaning">words, to speak, say</string>
    <string name="example_position">hen</string>
    <string name="example_text_error">No Internet Connect</string>
    <string name="no_internet_connect">No Internet Connect</string>
    <string name="_2_5">2/5</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="kanji">Kanji :</string>
    <string name="submit">Submit :</string>
    <string name="notification">Notification</string>

</resources>