<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_story"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sfprodisplayregular"
        android:text="@string/example_story"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_update"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/button_delete"
        android:layout_width="@dimen/circle"
        android:layout_height="@dimen/circle"
        android:layout_marginEnd="26dp"
        android:background="@null"
        android:contentDescription="@string/description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/button_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_update"
        app:srcCompat="@drawable/baseline_circle_24"
        app:tint="@color/sunset_orange" />

    <ImageButton
        android:id="@+id/button_update"
        android:layout_width="@dimen/circle"
        android:layout_height="@dimen/circle"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:contentDescription="@string/description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/textView_story"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintTop_toTopOf="@+id/textView_story"
        app:srcCompat="@drawable/baseline_circle_24"
        app:tint="@color/pastel_orange" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/story"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@+id/button_delete"
        app:layout_constraintStart_toStartOf="@+id/button_delete"
        app:layout_constraintTop_toBottomOf="@+id/button_delete" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@+id/button_update"
        app:layout_constraintStart_toStartOf="@+id/button_update"
        app:layout_constraintTop_toBottomOf="@+id/button_update" />

</androidx.constraintlayout.widget.ConstraintLayout>