<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idTVHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/pie_chart"
        android:textAlignment="center"
        android:textSize="20sp" />

    <!--Ui component for our pie chart-->
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/idTVHead"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:id="@+id/Linear_Line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pieChart"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/grade_1"
            android:textAlignment="center"
            android:textSize="@dimen/legend_text"
            app:drawableLeftCompat="@drawable/baseline_circle_24"
            app:drawableTint="@color/pie1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/grade_2"
            android:textAlignment="center"
            android:textSize="@dimen/legend_text"
            app:drawableLeftCompat="@drawable/baseline_circle_24"
            app:drawableTint="@color/pie2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/grade_3"
            android:textAlignment="center"
            android:textSize="@dimen/legend_text"
            app:drawableLeftCompat="@drawable/baseline_circle_24"
            app:drawableTint="@color/pie3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/Linear_Line1"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/grade_4"
            android:textAlignment="center"
            android:textSize="@dimen/legend_text"
            app:drawableLeftCompat="@drawable/baseline_circle_24"
            app:drawableTint="@color/pie4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/grade_5"
            android:textAlignment="center"
            android:textSize="@dimen/legend_text"
            app:drawableLeftCompat="@drawable/baseline_circle_24"
            app:drawableTint="@color/pie5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/grade_5"
            android:textAlignment="center"
            android:textSize="@dimen/legend_text"
            app:drawableLeftCompat="@drawable/baseline_circle_24"
            app:drawableTint="@color/pie5" />
    </LinearLayout>

</RelativeLayout>