<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/split_line"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_line_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/example"
        android:textSize="@dimen/title2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/card_add_story"
        android:layout_width="@dimen/circle"
        android:layout_height="@dimen/circle"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/description"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/textView_line_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_line_story"
        app:srcCompat="@drawable/baseline_circle_24"
        app:tint="@color/malachite" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="@+id/card_add_story"
        app:layout_constraintEnd_toStartOf="@+id/card_add_story"
        app:layout_constraintTop_toTopOf="@+id/card_add_story" />
</androidx.constraintlayout.widget.ConstraintLayout>