<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.home.HeisigFragment">

    <TextView
        android:id="@+id/tvReadingOn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/bestten_crt"
        android:text="@string/exampleOn"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvReadingKun"
        app:layout_constraintTop_toBottomOf="@+id/tvReadingKun" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="@dimen/heisigKanjiCard_size"
        android:layout_height="@dimen/heisigKanjiCard_size"
        android:layout_marginStart="32dp"
        android:background="?attr/colorSurface"
        android:elevation="@dimen/heisigKanjiCard_elevation"
        app:cardBackgroundColor="@color/heisigKanji_cardColor"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7">

        <TextView
            android:id="@+id/tvKanji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bestten_crt"
            android:text="@string/sampleKanjiUI"
            android:textColor="@color/heisigKanji_textColor"
            android:textSize="@dimen/heisigKanjiCard_textSize" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/eightbit_dragon"
        android:text="@string/meaning"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <TextView
        android:id="@+id/tvMeaning"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/eightbit_dragon"
        android:lineSpacingExtra="2sp"
        android:text="@string/exampleMeaning"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/eightbit_dragon"
        android:text="@string/reading"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tvMeaning" />

    <TextView
        android:id="@+id/tvReadingKun"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bestten_crt"
        android:text="@string/exampleKun"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvMeaning"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="160dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvMeaning,textView8,materialCardView,textView7,tvReadingKun,tvReadingOn"
        tools:layout_editor_absoluteX="247dp"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="materialCardView"
        tools:layout_editor_absoluteX="411dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvMeaning"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="378dp" />


</androidx.constraintlayout.widget.ConstraintLayout>